Closed Bug 390180 Opened 18 years ago Closed 18 years ago

Full page zoom interacts badly with bfcache

Categories

(Core Graveyard :: GFX, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: sylvain.pasche, Assigned: sharparrow1)

References

Details

Attachments

(1 file)

Steps to reproduce: 1. Set full page zoom to 200% for instance 2. Click on a link to open a new page 3. Reset zoom back to 100% 4. Press back 5. See how original page looks garbled
Flags: blocking1.9?
Flags: blocking1.9? → blocking1.9+
Attached patch PatchSplinter Review
I think this fixes up all the fastback-related page zoom bugs. It's basically just acting more like text zoom.
Assignee: nobody → sharparrow1
Status: NEW → ASSIGNED
Attachment #276497 - Flags: review?(roc)
Comment on attachment 276497 [details] [diff] [review] Patch + NS_ASSERTION(!mPresContext || mPresContext->GetFullZoom() == mPageZoom, + "mPresContext->TextZoom() != mTextZoom"); The text is wrong
Attachment #276497 - Flags: superreview+
Attachment #276497 - Flags: review?(roc)
Attachment #276497 - Flags: review+
Attachment #276497 - Flags: approval1.9+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: