Bug 390180: Full page zoom interacts badly with bfcache. r+sr+a=roc